front/src/styles/Lobbies.css
/* ... */
#goBackToLobby__button .circle .icon.arrow {
    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
    left: 0;
    width: 0.9rem;
    height: 0.125rem;
    background: none;
}

#goBackToLobby__button .circle .icon.arrow::before {
    position: absolute;
    content: "";
    top: -0.30rem;
    right: 0.0625rem;
    width: 0.625rem;
    height: 0.625rem;
    border-top: 0.125rem solid var(--white);
    border-right: 0.125rem solid var(--white);
    transform: rotate(45deg);
}

#goBackToLobby__button .button-text {
    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
    position: absolute;
    top: 10px;
    left: 0;
    right: 0;
    bottom: 0;
    padding: 0.75rem 0;
    margin: 0;
    color: var(--primary-color);
    font-weight: 700;
    line-height: 1.6;
    text-align: center;
    text-transform: uppercase;
}

#goBackToLobby__button:hover .circle {
    width: 100%;
}

#goBackToLobby__button:hover .circle .icon.arrow {
    background: var(--white);
    transform: translate(18rem, 0);
}

#goBackToLobby__button:hover .button-text {
    color: var(--white);
}

/* ===================================================================== */

.connectedUsers__userList {
    list-style: none;
    width: 100%;
    max-width: 100%;
    display: flex;
    margin: 0 auto;
    clear: both;
    color: #000000;
    padding: 10px;
    justify-content: flex-start;
    align-items: center;
    overflow-x: scroll;
}

.item__imgDiv {
    cursor: pointer;
    grid-area: 1 / 1 / 2 / 2;
}

.item__name {
    grid-area: 2 / 1 / 3 / 2;
}

.item__image {
    margin: 0 auto;
    align-self: center;
}

.item__imgDiv {
    align-self: center;
    margin: 0 auto;
}

.item__name {
    align-self: center;
    text-align: center;
}

.userList__item {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: repeat(3, 1fr);
    clear: both;
    width: 15%;
    color: #baffb1;
    background-color: #124d00;
    margin: 0 auto;
    margin-bottom: 1vw;
    height: 50vh;
    padding: 20px;
    padding-top: 70px;
    border-color: #000000;
    border-style: solid;
    border-width: 6px 0;
    position: relative;
}


.userList__item::after {
    background-color: inherit;
    box-shadow: 6px 0 0 #000000, 0 -6px #000000, 0 6px #000000;
    content: "";
    display: block;
    height: calc(100% - 12px);
    position: absolute;
    right: -6px;
    top: 6px;
    width: 6px;
}

.userList__item::before {
    background-color: inherit;
    box-shadow: -6px 0 0 #000000, 0 -6px #000000, 0 6px #000000;
    content: "";
    display: block;
    height: calc(100% - 12px);
    position: absolute;
    left: -6px;
    top: 6px;
    width: 6px;
}

.lobbies__error {
    color: red;
    text-align: center;
    font-family: pixel_operator;
    font-size: 0.75em;
    src: url(../fonts/pixel_operator/PixelOperator8.ttf);
}

.button-startGame {
    text-align: center;
}

.startGame {
    background-color: green;
    border-color: #000000;
    border-style: solid;
    border-width: 6px 0;
    color: #ffffff;
    display: inline-block;
    margin: 0 auto;
    padding: 10px;
    position: relative;
    text-decoration: none;
    text-transform: uppercase;
    color: #ffffff;
    text-align: center;
    justify-content: center;
    align-self: center;
    transition: all 0.5s;
    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.37);
}

.startGame::after {
    background-color: green;
    box-shadow: 6px 0 0 #000000, 0 -6px #000000, 0 6px #000000;
    content: "";
    display: block;
    height: calc(100% - 12px);
    position: absolute;
    right: -6px;
    top: 6px;
    width: 6px;
    transition: all 0.5s;
}

.startGame::before {
    background-color: green;
    box-shadow: -6px 0 0 #000000, 0 -6px #000000, 0 6px #000000;
    content: "";
    display: block;
    height: calc(100% - 12px);
    position: absolute;
    left: -6px;
    top: 6px;
    width: 6px;
    transition: all 0.5s;
}

.startGame:hover {
    box-shadow: none;
    background-color: #027202;
    transform: translate(0, 5px);
    cursor: pointer;
}

.startGame:hover::after,
.startGame:hover::before {
    background-color: #027202;
}

.send__button {
    font-size: 1rem;
    background-color: green;
    border-color: #000000;
    border-style: solid;
    border-width: 4px 0;
    color: #ffffff;
    display: inline-block;
    margin: 0 auto;
    padding: 10px;
    position: relative;
    text-decoration: none;
    text-transform: uppercase;
    color: #ffffff;
    text-align: center;
    justify-content: center;
    align-self: center;
    transition: all 0.5s;
    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.37);
    margin: auto 0;
}

.send__button::after {
    background-color: green;
    box-shadow: 4px 0 0 #000000, 0 -4px #000000, 0 4px #000000;
    content: "";
    display: block;
    height: calc(100% - 12px);
    position: absolute;
    right: -6px;
    top: 6px;
    width: 6px;
    transition: all 0.5s;
}

.send__button::before {
    background-color: green;
    box-shadow: -4px 0 0 #000000, 0 -4px #000000, 0 4px #000000;
    content: "";
    display: block;
    height: calc(100% - 12px);
    position: absolute;
    left: -6px;
    top: 6px;
    width: 6px;
    transition: all 0.5s;
}

.send__button:hover {
    box-shadow: none;
    background-color: #027202;
    transform: translate(0, 2px);
    cursor: pointer;
}

.send__button:hover::after,
.send__button:hover::before {
    background-color: #027202;
}

.form--grid {
    position: fixed;
    display: flex;
    bottom: 0;
    left: 30px;

}

.inputMsg-div {
    width: 65%;
    left: -6px;
    grid-area: 1 / 1 / 2 / 2;
}

.buttonMsg-div {
    grid-area: 1 / 2 / 2 / 3;
}



.inputMsg-div {
    margin: 0 0 0 20px;
    margin-right: 40px;
    position: relative;
    margin-bottom: 45px;
    border-color: #000000;
    border-style: solid;
    border-width: 4px 0;
    color: #000000;
    position: relative;
    transition: all 1s;
}
/* ... */

